fixed columns for .row on small screens

--- a/code/styles.css
+++ b/code/styles.css
@@ -74,7 +74,14 @@ footer {
   text-align: center;
 }
 
-.row ul {
+.row {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.row li {
+  margin-bottom: 10px;
   list-style-type: none;
 }
 
@@ -132,6 +139,8 @@ section a {
 }
 
 
+
+
 /* Media Queries */
 
 /*splits footer into separate columns on larger screens*/
@@ -167,10 +176,6 @@ section a {
     max-width: 30%;
   }
 
-  .row {
-    display: flex;
-    justify-content: center;
-  }
 
 
 }
